--- a/src/main/resources/assets/plants_v_machines/lang/en_us.json
+++ b/src/main/resources/assets/plants_v_machines/lang/en_us.json
@@ -22,6 +22,13 @@
   "item.plants_v_machines.medium_money": "Medium Money Pile",
   "item.plants_v_machines.large_money": "Large Money Pile",
 
+  "item.plants_v_machines.frying_pan": "Frying Pan",
+  "item.plants_v_machines.australium_sword": "Australium Sword",
+  "item.plants_v_machines.australium_shovel": "Australium Shovel",
+  "item.plants_v_machines.australium_hoe": "Australium Hoe",
+  "item.plants_v_machines.australium_pickaxe": "Australium Pickaxe",
+  "item.plants_v_machines.australium_axe": "Australium Axe",
+
   "tooltip.plants_v_machines.australium_detector.tooltip": "Finds Australium underground",
 
   "creativetab.pvm_tab": "Plants V Machines"
